@@ -44,7 +44,7 @@
   <a href="#4.10b">4.10b. [version 1.1.99pre1 and later] Hey, the search string behavior has reverted, it's now like Pico, what happened to the consistency?</a><br>
   <a href="#4.11">4.11. How do I make nano my default editor (in Pine, mutt, etc.)?</a><br>
   <a href="#4.12">4.12. I've compiled nano with color support, but I don't see any color when I run it!</a><br>
-  <a href="#4.13">4.13. How do I select text for the clipboard in an X terminal when I'm running nano in one and nano's mouse support is turned on?</a></p></blockquote>
+  <a href="#4.13">4.13. How do I select text for or paste text from the clipboard in an X terminal when I'm running nano in one and nano's mouse support is turned on?</a></p></blockquote>
 <h2><a href="#5">5. Internationalization</a></h2>
 <blockquote><p><a href="#5.1">5.1. There's no translation for my language!</a><br>
   <a href="#5.2">5.2. I don't like the translation for &lt;x&gt; in my language. How can I fix it?</a><br>
@@ -255,8 +255,8 @@
 <h2><a name="7.5"></a>7.5. Can I have CVS write access?</h2>
 <blockquote><p>Re-read Section <a href="#7.4">7.4</a> and you should know the answer.</p></blockquote>
 <h2><a name="8"></a>8. ChangeLog</h2>
-<blockquote>
-<p>2006/07/25 - Update section 5.3 again to not state &quot;the latest development version&quot; before 1.3.12, as it's no longer accurate. Also add some minor spacing fixes. (DLR)<br>
+<blockquote><p>2006/10/06 - Update the question in section 4.13 to match the version of it in the answer section. (DLR)
+2006/07/25 - Update section 5.3 again to not state &quot;the latest development version&quot; before 1.3.12, as it's no longer accurate. Also add some minor spacing fixes. (DLR)<br>
 2006/06/12 - Update section 5.3, due to the display fix for two-column Unicode characters. (DLR)<br>
 2006/06/05 - Add a new section 4.8, and move all section 4 entries after it down one number, to explain how to deal with glibc 2.2.3's crashes involving extended regular expressions. (DLR)<br>
 2006/06/04 - Add minor punctuation, wording, and typo fixes. (DLR)<br>
